frontend/tests/cases/positive/cartesianCase.gr
import Bool

foo : Bool |∞| -> Bool |1 : Nat=|
foo x =
  case x of
     |False| -> |False|;
     |True| -> |True|
