frontend/tests/cases/negative/isEmpty.gr
import Prelude

isEmpty : forall (n : Nat) . Vec n Int -> Bool
isEmpty xs =
    case xs of
      Nil        -> True;
      (Cons _ _) -> False
